productdetail page , login , signup page , homepage sections

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 
 
 @import "tailwindcss";
+@plugin "daisyui";
 
 @theme {
   /* 1. Define Brand Colors */
@@ -28,4 +29,15 @@
 body {
   background-color: var(--color-background);
   color: #ffffff;
+}
+
+
+/* globals.css */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 1000px #0B0C10 inset !important;
+    -webkit-text-fill-color: white !important;
+    transition: background-color 5000s ease-in-out 0s;
 }
